apps/ntfy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    cloudlab.kerbaras.com/gateway-access: "true"
